references/sysmlv2/SysML-v2-Pilot-Implementation/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/CaseUsage_Invalid.sysml.xt
version https://git-lfs.github.com/spec/v1
oid sha256:5ac267ebd7a63a4d3f33074e498e48b091c77e40bec68e793f138e64b49beb26
size 4198
